fixed height on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@ $inPuzzle: #dec915;
 $inPlace: #5db40a;
 
 .full-height {
-  min-height: 100vh;
+  height: 100vh;
 }
 
 div.notInPuzzle,
@@ -64,6 +64,7 @@ button.inPuzzle {
   align-items: center;
   border: 2px solid #bebebe;
   text-transform: uppercase;
+  font-size: 1.3rem;
   font-weight: bold;
   min-height: 37px;
 }
